// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExerciseForm Rendering Tests No data 1`] = `
<div
  className="container-md"
>
  <div
    className="row"
  >
    <form
      className=""
      id="addExerciseForm"
      onSubmit={[Function]}
    >
      <div
        className="mb-3 form-floating"
      >
        <input
          aria-label="name"
          className="form-control"
          id="floatingExerciseName"
          onChange={[Function]}
          type="text"
          value=""
        />
        <label
          htmlFor="floatingExerciseName"
        >
          Name
        </label>
      </div>
      <div
        className="mb-3 form-floating"
      >
        <input
          aria-label="muscleGroup"
          className="form-control"
          id="floatingMuscleGroup"
          onChange={[Function]}
          type="text"
          value=""
        />
        <label
          htmlFor="floatingMuscleGroup"
        >
          Muscle Group
        </label>
      </div>
      <div
        className="mb-3 form-floating"
      >
        <textarea
          aria-label="exerciseNotes"
          className="form-control"
          id="floatingExerciseNotes"
          onChange={[Function]}
          rows={3}
          value=""
        />
        <label
          htmlFor="floatingExerciseNotes"
        >
          Notes
        </label>
      </div>
    </form>
  </div>
  <div
    className="row"
  >
    <div
      className="container-md"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <div
          className="justify-content-md-center align-items-md-center row row-cols-md-4"
        >
          <div
            className="col-md"
          >
            <div
              className="mb-3 form-floating"
            >
              <input
                aria-label="reps"
                className="form-control"
                id="floatingReps"
                onChange={[Function]}
                type="text"
                value=""
              />
              <label
                htmlFor="floatingReps"
              >
                Reps
              </label>
            </div>
          </div>
          <div
            className="col-md"
          >
            <div
              className="mb-3 form-floating"
            >
              <input
                aria-label="weight"
                className="form-control"
                id="floatingWeight"
                onChange={[Function]}
                type="text"
                value=""
              />
              <label
                htmlFor="floatingWeight"
              >
                Weight
              </label>
            </div>
          </div>
        </div>
        <button
          aria-label="setSubmit"
          className="float-end btn btn-outline-secondary"
          disabled={false}
          type="submit"
        >
          Add Set
        </button>
      </form>
    </div>
  </div>
  <div
    className="row"
  >
    <button
      aria-label="exerciseSubmit"
      className="mt-4 btn btn-outline-secondary"
      disabled={false}
      form="addExerciseForm"
      type="submit"
    >
      Add Exercise
    </button>
  </div>
</div>
`;

exports[`ExerciseForm Rendering Tests With Data 1`] = `
<div
  className="container-md"
>
  <div
    className="row"
  >
    <form
      className=""
      id="addExerciseForm"
      onSubmit={[Function]}
    >
      <div
        className="mb-3 form-floating"
      >
        <input
          aria-label="name"
          className="form-control"
          id="floatingExerciseName"
          onChange={[Function]}
          type="text"
          value="Lunges"
        />
        <label
          htmlFor="floatingExerciseName"
        >
          Name
        </label>
      </div>
      <div
        className="mb-3 form-floating"
      >
        <input
          aria-label="muscleGroup"
          className="form-control"
          id="floatingMuscleGroup"
          onChange={[Function]}
          type="text"
          value="Legs"
        />
        <label
          htmlFor="floatingMuscleGroup"
        >
          Muscle Group
        </label>
      </div>
      <div
        className="mb-3 form-floating"
      >
        <textarea
          aria-label="exerciseNotes"
          className="form-control"
          id="floatingExerciseNotes"
          onChange={[Function]}
          rows={3}
          value="Dumbbells"
        />
        <label
          htmlFor="floatingExerciseNotes"
        >
          Notes
        </label>
      </div>
    </form>
  </div>
  <div
    className="row"
  >
    <div
      className="container-md"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <div
          className="justify-content-md-center align-items-md-center row row-cols-md-4"
        >
          <div
            className="col-md"
          >
            <div
              className="mb-3 form-floating"
            >
              <input
                aria-label="reps"
                className="form-control"
                id="floatingReps"
                onChange={[Function]}
                type="text"
                value=""
              />
              <label
                htmlFor="floatingReps"
              >
                Reps
              </label>
            </div>
          </div>
          <div
            className="col-md"
          >
            <div
              className="mb-3 form-floating"
            >
              <input
                aria-label="weight"
                className="form-control"
                id="floatingWeight"
                onChange={[Function]}
                type="text"
                value=""
              />
              <label
                htmlFor="floatingWeight"
              >
                Weight
              </label>
            </div>
          </div>
        </div>
        <button
          aria-label="setSubmit"
          className="float-end btn btn-outline-secondary"
          disabled={false}
          type="submit"
        >
          Add Set
        </button>
      </form>
    </div>
    <div
      className="pt-3 container"
      style={
        Object {
          "margin": "auto",
          "textAlign": "center",
          "width": "60%",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "left",
          }
        }
      >
        Set List
      </div>
      <table
        className="table table-sm table-striped table-bordered table-hover"
      >
        <thead>
          <tr>
            <th>
              Reps
            </th>
            <th>
              Weight
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            onClick={[Function]}
          >
            <td>
              40
            </td>
            <td>
              100
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td>
              40
            </td>
            <td>
              100
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td>
              40
            </td>
            <td>
              100
            </td>
          </tr>
          <tr
            onClick={[Function]}
          >
            <td>
              40
            </td>
            <td>
              100
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="row"
  >
    <button
      aria-label="exerciseSubmit"
      className="mt-4 btn btn-outline-secondary"
      disabled={false}
      form="addExerciseForm"
      type="submit"
    >
      Add Exercise
    </button>
  </div>
</div>
`;
